# pycon-2023

./: .gitignore  README.md  pyproject.toml
extra_testing/: exhaust.py  github_issues.py  unreach.py
peps/: 544.py  563.py  586.py  589.py  591.py  593.py  604.py  612.py  613.py  646.py  647.py  649.py  655.py  673.py  675.py  681.py  helper.py
speed/: speed_test.py
speed/25k-lines/: requirements-docs.txt  requirements-tests.txt  requirements.txt
speed/35k-lines/: pyproject.toml
speed/35k-lines/tests/: test_fields.py
type_checker_features/mypy_directory/: magic.py  plugin.py
type_checker_features/mypy_directory/stubgen/: somefile.py  somefile.pyi
type_checker_features/mypy_directory/stubgen/cmodule/: multiply_module.c  setup.py
type_checker_features/mypy_directory/stubtest/advanced/: advanced.py  advanced.pyi
type_checker_features/mypy_directory/stubtest/mymodule/: mymodule.py  mymodule.pyi
type_checker_features/pyre_directory/: 1.json  __init__.py
type_checker_features/pyre_directory/.pyre/: pyre.stderr
type_checker_features/pyre_directory/.pyre/new_server/: server.stderr  server.stderr.2023_06_29_15_58_06_173597  server.stderr.2023_07_05_09_29_18_863913  server.stderr.2023_07_05_09_31_11_678060  server.stderr.2023_07_05_09_31_19_894190  server.stderr.2023_07_05_09_31_25_219803  server.stderr.2023_07_05_09_31_30_709093
type_checker_features/pyre_directory/.pyre/types/: somefile.pyi  tricky.pyi
type_checker_features/pyre_directory/test_stubs/: somefile.py  tricky.py  window.json
type_checker_features/pyright_directory/: __init__.py  somefile.py  tricky.py
type_checker_features/pyright_directory/typings/pyright_directory/: __init__.pyi  somefile.pyi  tricky.pyi
type_checker_features/pytype_directory/: somefile.py
type_checker_features/pytype_directory/.pytype/: build.ninja
